// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core spreadsheet API cell not found 1`] = `
{
  "error": "Not Found",
  "message": "Cell not found",
  "statusCode": 404,
}
`;

exports[`Core spreadsheet API complex circular reference 1`] = `
{
  "error": "Unprocessable Entity",
  "message": "Circular reference found",
  "statusCode": 422,
}
`;

exports[`Core spreadsheet API complex circular reference 2`] = `
{
  "a": {
    "result": "2",
    "value": "2",
  },
  "b": {
    "result": "3",
    "value": "=a + 1",
  },
  "c": {
    "result": "5",
    "value": "=b + 2",
  },
  "d": {
    "result": "9",
    "value": "=c + 4",
  },
  "e": {
    "result": "6",
    "value": "=b + 3",
  },
  "f": {
    "result": "20",
    "value": "=d + 5 + e",
  },
}
`;

exports[`Core spreadsheet API complex circular reference with different cases 1`] = `
{
  "error": "Unprocessable Entity",
  "message": "Circular reference found",
  "statusCode": 422,
}
`;

exports[`Core spreadsheet API complex circular reference with different cases 2`] = `
{
  "apple": {
    "result": "2",
    "value": "2",
  },
  "banana": {
    "result": "3",
    "value": "=aPPle + 1",
  },
  "candle": {
    "result": "5",
    "value": "=SUM(BANANA, 2)",
  },
  "dummy": {
    "result": "9",
    "value": "=CANDLE + 4",
  },
  "eggplant": {
    "result": "6",
    "value": "=BANaNA + 3",
  },
  "f": {
    "result": "20",
    "value": "=dummy + 5 + EggPlanT",
  },
}
`;

exports[`Core spreadsheet API complex update case 1`] = `
{
  "a": {
    "result": "4",
    "value": "4",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
  "c": {
    "result": "7",
    "value": "=a+b",
  },
  "d": {
    "result": "12",
    "value": "=b*a",
  },
  "e": {
    "result": "19",
    "value": "=c + d",
  },
}
`;

exports[`Core spreadsheet API complicated case 1`] = `
{
  "a": {
    "result": "2",
    "value": "2",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
  "c": {
    "result": "5",
    "value": "=a+b",
  },
  "d": {
    "result": "6",
    "value": "=b*a",
  },
  "e": {
    "result": "11",
    "value": "=c + d",
  },
}
`;

exports[`Core spreadsheet API function names in cells 1`] = `
{
  "sum": {
    "result": "2",
    "value": "2",
  },
  "sumofsum": {
    "result": "5",
    "value": "=SUM(sum, 3)",
  },
}
`;

exports[`Core spreadsheet API get single cell 1`] = `
{
  "result": "test",
  "value": "test",
}
`;

exports[`Core spreadsheet API self reference 1`] = `
{
  "error": "Unprocessable Entity",
  "message": "Self reference is not allowed",
  "statusCode": 422,
}
`;

exports[`Core spreadsheet API self reference 2`] = `
{
  "a": {
    "result": "2",
    "value": "2",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
}
`;

exports[`Core spreadsheet API should handle update to string 1`] = `
{
  "a": {
    "result": "2",
    "value": "2",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
  "c": {
    "result": "5",
    "value": "=a+b",
  },
}
`;

exports[`Core spreadsheet API should handle update to string 2`] = `
{
  "a": {
    "result": "number of persons: ",
    "value": "number of persons: ",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
  "c": {
    "result": "number of persons: 3",
    "value": "=a+b",
  },
}
`;

exports[`Core spreadsheet API should update deps 1`] = `
{
  "a": {
    "result": "2",
    "value": "2",
  },
  "b": {
    "result": "3",
    "value": "=a + 1",
  },
  "c": {
    "result": "11",
    "value": "=e + 5",
  },
  "d": {
    "result": "15",
    "value": "=c + 4",
  },
  "e": {
    "result": "6",
    "value": "=b + 3",
  },
  "f": {
    "result": "26",
    "value": "=d + 5 + e",
  },
}
`;

exports[`Core spreadsheet API simple case 1`] = `
{
  "var1": {
    "result": "2",
    "value": "2",
  },
  "var2": {
    "result": "3",
    "value": "3",
  },
  "var3": {
    "result": "5",
    "value": "=var1+var2",
  },
}
`;

exports[`Core spreadsheet API simple circular reference 1`] = `
{
  "error": "Unprocessable Entity",
  "message": "Circular reference found",
  "statusCode": 422,
}
`;

exports[`Core spreadsheet API simple circular reference 2`] = `
{
  "a": {
    "result": "3",
    "value": "=b",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
}
`;

exports[`Core spreadsheet API simple dendency update 1`] = `
{
  "a": {
    "result": "2",
    "value": "2",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
  "c": {
    "result": "5",
    "value": "=a+b",
  },
}
`;

exports[`Core spreadsheet API simple dendency update 2`] = `
{
  "a": {
    "result": "7",
    "value": "7",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
  "c": {
    "result": "10",
    "value": "=a+b",
  },
}
`;

exports[`Core spreadsheet API simple update case 1`] = `
{
  "a": {
    "result": "test",
    "value": "test",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
}
`;

exports[`Core spreadsheet API wrong reference value 1`] = `
{
  "result": "test",
  "value": "=a",
}
`;
